<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/b1"
    tools:context=".Register2Activity">

    <EditText
        android:id="@+id/regName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"

        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:hint="@string/name"
        android:drawableStart="@drawable/ic_person_outline_black_24dp" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"

        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email_black_24dp" />

    <EditText
        android:id="@+id/regPwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"

        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp" />


    <EditText
        android:id="@+id/regPwdConfirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"

        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />

    <EditText
        android:id="@+id/regMobile"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:drawableLeft="@drawable/ic_phone_android_black_24dp"
        android:hint="@string/mobile_no" />

    <EditText
        android:id="@+id/regAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_location_on_black_24dp"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/regPincode"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_pin_drop_black_24dp"
        android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
        android:hint="@string/pincode" />

    <EditText
        android:id="@+id/regDOB"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_date_range_black_24dp"
        android:drawableLeft="@drawable/ic_date_range_black_24dp"
        android:hint="@string/dob" />

    <Switch
        android:id="@+id/userType"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        android:text="@string/user_type"
        android:textColor="#9c1de7"
        android:textSize="20dp"
        android:background="#fff"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/cust_btn"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20dp"
        android:text="@string/register1"
        android:textColor="#ffff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/already_registered"
            android:textColor="#9c1de7"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/TextView_login1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:text="@string/login1"
            android:textColor="#9c1de7"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>