<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/b1">

    <EditText
        android:id="@+id/loginMobile"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="#ffff"
        android:hint="@string/mobile_no"

        android:drawableLeft="@drawable/ic_phone_android_black_24dp"
        />

    <EditText
        android:id="@+id/loginPwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"

        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/cust_btn"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="20dp"
        android:text="@string/login"
        android:textColor="#ffff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/not_registered"
            android:textColor="#9c1de7"
            />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#9c1de7"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>